adapters/cln/tests/snapshots/golden_correlator__4node_reroute_traces.snap
---
source: adapters/cln/tests/golden_correlator.rs
expression: traces
---
- payment_hash: fe1983c344ecb7f83bd1d5a93ca156b93d4d556e4f9d596deef510b355783e91
  attempts:
    - groupid: 4284086957700042209
      partid: 1
      hops:
        - index: 0
          node_id: 02b7629c77973b95e679f456d852412f0ecd97f1ee1ff8b4e959d05b2f8f1defde
          amount_msat: 900000000
          fee_msat: 0
          confidence: exact
      success: true
      duration_secs: 0.267976667
  success: true
- payment_hash: d6e731d11f9f40b1d9564a04ab058a6c1f312926c77cfa938146bfa14dda0b0c
  attempts:
    - groupid: 7074241625330022270
      partid: 1
      hops:
        - index: 0
          node_id: 03a679f6d264f054ca24cc469ec2939cc5c03965a556ebf8047b96d282e4ca9724
          amount_msat: 50000501
          fee_msat: 0
          confidence: exact
        - index: 1
          node_id: 02b7629c77973b95e679f456d852412f0ecd97f1ee1ff8b4e959d05b2f8f1defde
          amount_msat: 50000000
          fee_msat: 501
          confidence: exact
          failure:
            sender_failcode: 4103
            local_failreason: WIRE_TEMPORARY_CHANNEL_FAILURE
            inferred_cause: "insufficient outbound liquidity (spendable 35694000 msat, HTLC requested 50000000 msat)"
      success: false
      failure:
        failcode: 4103
        erring_node: 03a679f6d264f054ca24cc469ec2939cc5c03965a556ebf8047b96d282e4ca9724
        explanation: "The channel cannot currently fulfill the HTLC. This code is overloaded: it covers insufficient liquidity, too many in-flight HTLCs, HTLC minimum not met, or a channel that is being closed."
      duration_secs: 0.353106758
    - groupid: 7074241625330022270
      partid: 2
      hops:
        - index: 0
          node_id: 03eff35779d928f687a0cd2839a557f06fbfc5c369f360d1c12033295d379ba469
          amount_msat: 50055000
          fee_msat: 0
          confidence: exact
        - index: 1
          node_id: 02b7629c77973b95e679f456d852412f0ecd97f1ee1ff8b4e959d05b2f8f1defde
          amount_msat: 50000000
          fee_msat: 55000
          confidence: exact
      success: true
      duration_secs: 0.464699084
  success: true
