adapters/cln/tests/snapshots/golden_correlator__4node_success_traces.snap
---
source: adapters/cln/tests/golden_correlator.rs
expression: traces
---
- payment_hash: 4c47ded7ad81b259bf657ccaf5dc64aa558083eec60995694d05e6baacd7120b
  attempts:
    - groupid: 7084061114156922794
      partid: 1
      hops:
        - index: 0
          node_id: 03a679f6d264f054ca24cc469ec2939cc5c03965a556ebf8047b96d282e4ca9724
          amount_msat: 50000501
          fee_msat: 0
          confidence: exact
        - index: 1
          node_id: 02b7629c77973b95e679f456d852412f0ecd97f1ee1ff8b4e959d05b2f8f1defde
          amount_msat: 50000000
          fee_msat: 501
          confidence: exact
      success: true
      duration_secs: 0.502442719
  success: true
